// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WizardHeader renders the default structure correctly 1`] = `
<div
  className="text-center card-header"
/>
`;

exports[`WizardHeader renders with children 1`] = `
<div
  className="text-center card-header"
>
  <div>
    My Child
  </div>
</div>
`;
